# ApPredict

./: .gitignore  .gitmodules  .project  CITATION.cff  CMakeLists.txt  LICENCE.txt  README.md  README.txt  SConscript
.github/workflows/: ubuntu-2004.yml  ubuntu-tests.yml
apps/: CMakeLists.txt
apps/src/: ApPredict.cpp  DoseResponseFitter.cpp  TorsadePredict.cpp
resources/fit_spread_to_control_data/: AZ_hERG_cisapride.mat  example_call.m  fit_spread_parameters.m
src/data_reading/: AbstractDataStructure.cpp  AbstractDataStructure.hpp  AbstractDrugDataStructure.cpp  AbstractDrugDataStructure.hpp  CardiovascRes2011DataStructure.hpp  DaviesDogDataStructure.cpp  DaviesDogDataStructure.hpp  PkpdDataStructure.hpp
src/dose_response_fitter/: HillFunction.cpp  HillFunction.hpp  NelderMeadMinimizer.cpp  NelderMeadMinimizer.hpp  RunHillFunctionMinimization.cpp  RunHillFunctionMinimization.hpp
src/extra_models/: README
src/fortests/: ActionPotentialDownsampler.cpp  ActionPotentialDownsampler.hpp  DoseCalculator.cpp  DoseCalculator.hpp  ModelFactory.cpp  ModelFactory.hpp  PkpdInterpolator.cpp  PkpdInterpolator.hpp  SetupModel.cpp  SetupModel.hpp
src/lookup/: AbstractUntemplatedLookupTableGenerator.cpp  AbstractUntemplatedLookupTableGenerator.hpp  LookupTableGenerator.cpp  LookupTableGenerator.hpp  LookupTableLoader.cpp  LookupTableLoader.hpp  LookupTableReader.cpp  LookupTableReader.hpp  ParameterBox.cpp  ParameterBox.hpp  ParameterPointData.hpp  QuantityOfInterest.hpp
src/single_cell/: AbstractActionPotentialMethod.cpp  AbstractActionPotentialMethod.hpp  ApPredictMethods.cpp  ApPredictMethods.hpp  CipaQNetCalculator.cpp  CipaQNetCalculator.hpp  SingleActionPotentialPrediction.hpp  TorsadePredictMethods.cpp  TorsadePredictMethods.hpp
src/stats/: AbstractDistribution.hpp  BayesianInferer.cpp  BayesianInferer.hpp  DoseResponseParameterTypes.hpp  LinearDiscriminantAnalysis.cpp  LinearDiscriminantAnalysis.hpp  LogLogisticDistribution.hpp  LogisticDistribution.hpp
test/: CMakeLists.txt  ContinuousTestPack.txt  NightlyTestPack.txt  TestActionPotentialDownsampler.hpp  TestApPredict.hpp  TestApPredictLong.hpp  TestBayesianInferer.hpp  TestCipaQNetCalculator.hpp  TestConvertLookupTableArchiveToBinary.hpp  TestDataReaders.hpp  TestDavies2012Paper.hpp  TestDoseCalculator.hpp  TestDoseResponseFitting.hpp  TestLinearDiscriminantAnalysis.hpp  TestLogisticDistribution.hpp  TestLookupTableGenerator.hpp  TestMakeALookupTable.hpp  TestMetadataCellmlModels.hpp  TestModelFactory.hpp  TestParameterBox.hpp  TestPkpdInterpolations.hpp  TestPkpdReader.hpp  TestTorsadePredict.hpp  TestTorsadePredictLong.hpp  TestTroublesomeApEvaluations.hpp
test/data/: DosTestFile.txt  UnixTestFile.txt  davies_dog_parameters.txt  ord_cipa_0.5Hz_state_vars.arch  pkpd_data.txt  pkpd_results.txt  q_net.txt
